Correções de token e refinamentos